correction on chair lift operational cost

--- a/Notebooks/05_modeling.ipynb
+++ b/Notebooks/05_modeling.ipynb
@@ -1823,7 +1823,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The model suggests, only an additional chair lift could increase the price 0.29 dollars. Over the season, this could be expected to amount 507246 dollars. If we consider the operating cost of the chair to be 100,000 dollars, the additional cost per visitor would be 100,000/350,000 ≈ 0.285 dollars. Since each visitor, on average, buy’s a 5-day ticket, $0.057 would need to be added to cover the chair lift’s cost. The model supports an 0.29 dollars increase which exceeds by .233 dollars after covering the operational cost. "
+    "The model suggests, only an additional chair lift could increase the price 0.29 dollars. Over the season, this could be expected to amount 507246 dollars. The operating cost of the chair is 1,540,000 dollars, the additional cost per visitor would be 1,540,000/350,000 ≈ 4.4 dollars. Since each visitor, on average, buy’s a 5-day ticket, 0.88 dollars would need to be added to cover the chair lift’s cost. The model supports an 0.29 dollars increase, which falls short by 0.59 dollars to cover the operational cost. But if we additionally add another run and increase the vertical drop to 150, this forecasts an increase of ticket price of 8.61 dollars and an of increase 150,654,71 dollars in revenue which could easliy conpensate for the additional operating cost. "
    ]
   },
   {
